2006-08-04  Scott Lembcke <lemb0029@gnome.org>
        
        * Added the GPL notification to all source files.
        
        * plug-ins/test.rb: Fixed a spelling error.
        
2006-08-04  Kevin Cozens  <kcozens@cvs.gnome.org>

	* po/POTFILES.in: Updated list of files

	* po/README.tools: Added

2006-08-03  Kevin Cozens  <kcozens@cvs.gnome.org>

	* ext/.cvsignore: Added ignore of ruby-fu-console executable.

	* po/.cvsignore: Added ignore of stamp-it.

2006-08-03  Kevin Cozens  <kcozens@cvs.gnome.org>

	* todo.txt: Added some additional items.

	* Makefile.am
	* ext/Makefile.am: Updated to build/install ruby-fu-console file
	needed by irbconsole.rb file.

	* ext/ruby-fu-console.c: Added support file needed by irbconsole.rb

2006-08-03  Scott Lembcke <lemb0029@gnome.org>

        * gimp-lib/gimp.rb: Now sets $KCODE to UTF8. Removed rubyfu.rb from list
          of loaded modules.
          
        * gimp-lib/rubyfu.rb: Now loads gimp.rb as a dependency. Creates and END
          block to automatically call RubyFu.main. Added conversion to object
          types for procedure arguments.
          
        * gimp-lib/gimp_oo.rb: Added a Gimp::Param#transform method to convert
          parameters to object types if possible.
          
        * gimp-lib/pdb.rb: Added a call to Gimp::Param#transform on return
          values if possible.
          
        * plug-ins/*.rb: Updated to reflect changes in gimp-lib.
        
        * ext/Makefile.am: Added DLOCALEDIR to AM_CFLAGS.
        
        * ext/rbgimpdialog.c: Added gettext() calls.
        
        * ext/rbgimpmain.c: Added Gettext initialization calls.

2006-07-28  Scott Lembcke <lemb0029@gnome.org>

        * Added plug-ins/irbconsole.rb.
        
        * plug-ins/Makefile.am: Added irbconsole.rb to the plugins list.
        
2006-07-28  Kevin Cozens  <kcozens@cvs.gnome.org>

	* configure.in: Changed minor version to an odd number (unstable